--- a/exercici1/css/main.css
+++ b/exercici1/css/main.css
@@ -14,22 +14,18 @@ li {
 
 header {
   height: 44px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#0a5c71), to(#063642));
   background-image: linear-gradient(to bottom, #0a5c71, #063642);
   position: relative;
 }
-
 header nav {
   position: absolute;
   bottom: 2px;
 }
-
 header nav li {
   display: inline-block;
   margin: 0 15px;
   vertical-align: baseline;
 }
-
 header nav li a {
   text-decoration: none;
   color: #ffffff;
@@ -39,7 +35,6 @@ main {
   margin: 20px 0 0;
   padding-bottom: 20px;
 }
-
 main img {
   margin: 20px;
 }
@@ -51,15 +46,12 @@ footer {
   bottom: 0;
   width: 100%;
 }
-
 footer li {
   display: inline-block;
   padding: 0 10px;
 }
-
 footer li a img {
   width: 30px;
   border-radius: 50%;
   overflow: hidden;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=main.css.map */
